Fix wrong font size & weight for the link under the posts

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -350,8 +350,6 @@ footer {
 
   background: $background-color;
 
-  font-size: small;
-
   & > section {
     text-align: center;
     max-width: 1000px;
@@ -361,6 +359,11 @@ footer {
   }
 
   &.small-footer {
+
+    h1 {
+      font-weight: 400;
+      font-size: 1em;
+    }
     a {
       color: #aaa;
 
